--- a/IdeaProjects/Springboot_EC/src/main/templates/orders/show.html
+++ b/IdeaProjects/Springboot_EC/src/main/templates/orders/show.html
@@ -5,6 +5,8 @@
     <title>View Order</title>
 </head>
 <body>
+<h2>Order</h2>
+
 
 <main class="container">
     <p>The email of the person who submitted the order is: <span th:text="${orders.email}"></span></p>
